bases/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example
  namespace: test
spec:
  selector:
    app: MyApp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9376
